# nsight-profiling

./: .gitignore  README.md  pyproject.toml
.pixi/: config.toml
src/nsight_profiling/genjax/notebooks/: smc_custom_proposal_2024-11-02T23:25:03.nsys-rep  smc_custom_proposal_2024-11-02T23:25:21.nsys-rep  smc_custom_proposal_2024-11-03T13:17:26.nsys-rep  smc_custom_proposal_2024-11-03T13:19:06.nsys-rep
