[project]
authors = [{name = "eightysteele", email = "eightysteele@gmail.com"}]
dependencies = []
description = "Add a short description here"
name = "nsight-profiling"
requires-python = ">= 3.11"
version = "0.1.0"

[tool.pixi.environments]
genjax-gpu = {features = ["cuda", "genjax-gpu-deps"]}

[project.optional-dependencies]
genjax-gpu-deps = ["genjax==0.7.0"]

[tool.pixi.feature.cuda]
platforms = ["linux-64"]
system-requirements = { cuda = "12" }

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.pypi-options]
index-url = "https://pypi.org/simple"
extra-index-urls = [
    "https://oauth2accesstoken@us-west1-python.pkg.dev/probcomp-caliban/probcomp/simple",
]

[tool.pixi.pypi-dependencies]
nsight_profiling = { path = ".", editable = true }

[tool.pixi.tasks]
