[project]
authors = [{name = "eightysteele", email = "eightysteele@gmail.com"}]
dependencies = []
description = "Add a short description here"
name = "nsight-profiling"
requires-python = ">= 3.12"
version = "0.1.0"

[tool.pixi.environments]
genjax-gpu = { features = [ "genjax-gpu", "genjax-common", "nsight-jupyter" ], solve-group = "default" }
genjax-cpu = { features = [ "genjax-cpu", "genjax-common" ], solve-group = "default" }

# -----------------------------------------------------------------------------
# PyPi optional dependencies.

[project.optional-dependencies]
nsight-jupyter = ["ipykernel", "pip>=24.3.1,<25", "jupyterlab>=4.3.0,<5", "notebook>=7.0.7,<8", "jupyterlab-nvidia-nsight>=0.6.0,<0.7"]
genjax-gpu = ["genjax==0.7.0", "jax[cuda12]==0.4.33"]
genjax-cpu = ["genjax==0.7.0", "jax==0.4.33"]

# -----------------------------------------------------------------------------
# GenJax common packages (for both GPU and CPU on linux-64 and osx-arm64).

[tool.pixi.feature.genjax-common.dependencies]
numpy = "<2.0.0"
matplotlib = "*"

# -----------------------------------------------------------------------------
# GenJax GPU packages (linux-64 only).

[tool.pixi.feature.genjax-gpu]
platforms = ["linux-64"]
system-requirements = { cuda = "12" }

[tool.pixi.feature.genjax-gpu.dependencies]
cuda-toolkit = ">=12.6.2,<13"

# -----------------------------------------------------------------------------
# GenJax CPU packages (linux-64 and osx-arm64).

[tool.pixi.feature.genjax-cpu]
platforms = ["linux-64", "osx-arm64"]

# -----------------------------------------------------------------------------

[tool.pixi.feature.nsight-ui.dependencies]
libopengl = "*"
xcb-util = "*"
xcb-util-cursor = "*"
libglx = "*"
libgl = "*"
libegl = "*"

# -----------------------------------------------------------------------------

[tool.pixi.feature.nsight-jupyter.dependencies]
nvtx = "*"

# -----------------------------------------------------------------------------

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]
conda-pypi-map = { "conda-forge" = "parselmouth.json" }

[tool.pixi.pypi-options]
index-url = "https://pypi.org/simple"
extra-index-urls = [
    "https://oauth2accesstoken@us-west1-python.pkg.dev/probcomp-caliban/probcomp/simple",
]

[tool.pixi.pypi-dependencies]
nsight_profiling = { path = ".", editable = true }

[tool.pixi.tasks]

