[project]
authors = [{name = "eightysteele", email = "eightysteele@gmail.com"}]
dependencies = []
description = "Add a short description here"
name = "nsight-profiling"
requires-python = ">= 3.12"
version = "0.1.0"

[tool.pixi.environments]
genjax-gpu = { features = [ "genjax-gpu", "genjax-common", "nsight-jupyter" ], solve-group = "genjax-gpu" }
genjax-cpu = { features = [ "genjax-cpu", "genjax-common" ], solve-group = "default" }

# -----------------------------------------------------------------------------
# GenJax common packages (for both GPU and CPU on linux-64 and osx-arm64).

[tool.pixi.feature.genjax-common.dependencies]
numpy = "<2.0.0"
matplotlib = "*"
ipykernel = "*"

[tool.pixi.feature.genjax-common.pypi-dependencies]
tensorboard = "*"
tensorflow = "*"
tensorboard-plugin-profile = "*"
protobuf = "*"
graphviz = "*"

# -----------------------------------------------------------------------------
# GenJax GPU packages (linux-64 only).

[tool.pixi.feature.genjax-gpu]
platforms = ["linux-64", "osx-arm64"]
system-requirements = { cuda = "12" }

[tool.pixi.feature.genjax-gpu.target.linux-64.dependencies]
cuda-toolkit = ">=12.6.2,<13"

[tool.pixi.feature.genjax-gpu.target.linux-64.pypi-dependencies]
genjax = "==0.7.0"
jax = { version = "==0.4.33", extras = ["cuda12"] }

# -----------------------------------------------------------------------------
# GenJax CPU packages (linux-64 and osx-arm64).

[tool.pixi.feature.genjax-cpu]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.feature.genjax-cpu.pypi-dependencies]
genjax = "==0.7.0"
jax = "==0.4.33"

# -----------------------------------------------------------------------------

[tool.pixi.feature.nsight-jupyter.pypi-dependencies]
ipykernel = "*"
pip = { version = ">=24.3.1,<25" }
jupyterlab = { version = ">=4.3.0,<5" }
notebook = { version = ">=7.0.7,<8" }
jupyterlab-nvidia-nsight = { version = ">=0.6.0,<0.7" }
nvtx = "*"

# -----------------------------------------------------------------------------

[tool.pixi.feature.nsight-ui.dependencies]
libopengl = "*"
xcb-util = "*"
xcb-util-cursor = "*"
libglx = "*"
libgl = "*"
libegl = "*"

# -----------------------------------------------------------------------------

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]
conda-pypi-map = { "conda-forge" = "parselmouth.json" }

[tool.pixi.pypi-options]
index-url = "https://pypi.org/simple"
extra-index-urls = [
    "https://oauth2accesstoken@us-west1-python.pkg.dev/probcomp-caliban/probcomp/simple",
]

[tool.pixi.pypi-dependencies]
nsight_profiling = { path = ".", editable = true }

[tool.pixi.tasks]

